# uulm_cb_solutions_practical-1

./: LICENSE  README.md
solutions/c/michael-lehn/: Makefile  error.c  error.h  example1.in  lexer.c  lexer.h  parser.c  parser.h  xtest_lexer.c  xtest_parser.c
solutions/c/michael-lehn/doc/: add.tex  expr.tex  exprseq.tex  lex.tex  mul.tex  pow.tex  prim.tex  tr.aux  tr.tex  unary.tex
solutions/c/mschmid98/: README.md  taschenrechner.c
solutions/cpp/ottojo/: README.md
solutions/haskell/ibbem/: LICENSE  Lexer.hs  Main.hs  Parser.hs  README.md  ibbem.cabal
solutions/java/mschmid98/: README.md  Taschenrechner.java
solutions/python/mschmid98/: README.md  taschenrechner.py
solutions/rust/slrtbtfs/calc/: LICENSE  grammar.md
solutions/rust/slrtbtfs/calc/src/: lexer.rs  location.rs  main.rs  parser.rs  syntax_tree.rs  test.rs
solutions/rust/yandrik/: .gitignore  Cargo.toml  Makefile.toml  README.md
solutions/rust/yandrik/src/: lib.rs
solutions/rust/yandrik/src/lexer/: errors.rs  tokens.rs
solutions/rust/yandrik/src/parser/: mod.rs
solutions/rust/yannik/: grammar.md
solutions/rust/yannik/src/: main.rs
solutions/rust/yannik/src/lexer/: fsm.rs  mod.rs
solutions/rust/yannik/src/parser/: errors.rs
