cabal-version:      2.2
name:               ibbem
version:            0.1.0.0
synopsis:           Solution for the first practial exercise sheet in Compiler Construction
-- description:
-- homepage:

-- bug-reports:
license:            MIT
author:             Benjamin Moosherr
maintainer:         Benjamin.Moosherr@uni-ulm.de

-- copyright:
-- category:
extra-source-files:   LICENSE
                    , README.md

executable haskell
    main-is:          Main.hs
    other-modules:    Lexer
                    , Parser
    -- other-extensions:
    build-depends:    base
                    , mtl
                    , flow
    -- hs-source-dirs:
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-missing-signatures
